--- a/html/home.html
+++ b/html/home.html
@@ -37,7 +37,7 @@
         </div>        
         <div class="style-container">
             <div class="center" id="no-decoration">
-                <img src="../images/me.png" alt="random image that acts as a link">
+                <img src="../images/me.png" alt="an image of me on Cypress Mountain">
             </div>
         </div>
         <div class="banner-block">
@@ -70,7 +70,7 @@
             <h3>Contact Me</h3>
             <p>778-000-1234</p>
             <p>calvinlin@gmail.com</p>
-            <a href="../index.html">Style Guide</a>
+            <a href="../style-guide.html">Style Guide</a>
         </div>
     </footer>
 </body>
