--- a/html/projects/chair.html
+++ b/html/projects/chair.html
@@ -75,7 +75,7 @@
     </div>
     <div class="style-container">
       <div class="center">
-          <a class="zoom" href="../../images/chair-ideation.png" target="_blank"><img src="../../images/chair-ideation.png" alt="random image that acts as a link"></a>
+          <a class="zoom" href="../../images/chair-ideation.png" target="_blank"><img src="../../images/chair-ideation.png" alt="first designs of the chair"></a>
       <div class="bottom-border"></div>
       </div>
     </div>
@@ -92,7 +92,7 @@ Another challenge was how we needed to convey both the fact that the model is a 
 
       <div class="style-container">
         <div class="center">
-            <a class="zoom" href="../../images/chair-ideation1.png" target="_blank"><img src="../../images/chair-ideation1.png" alt="random image that acts as a link"></a>
+            <a class="zoom" href="../../images/chair-ideation1.png" target="_blank"><img src="../../images/chair-ideation1.png" alt="gator-esque design of the chair accomodating for human ergonomics"></a>
         <div class="bottom-border-white"></div>
         </div>
       </div>
@@ -108,7 +108,7 @@ Another challenge was how we needed to convey both the fact that the model is a 
     </div>
     <div class="style-container">
       <div class="center">
-          <a class="zoom" href="../../images/233.png" target="_blank"><img src="../../images/233.png" alt="random image that acts as a link"></a>
+          <a class="zoom" href="../../images/233.png" target="_blank"><img src="../../images/233.png" alt="finalized design of the gator chair"></a>
       <div class="bottom-border"></div>
       </div>
     </div>
@@ -159,7 +159,7 @@ Another challenge was how we needed to convey both the fact that the model is a 
             <h3>Contact Me</h3>
             <p>778-000-1234</p>
             <p>calvinlin@gmail.com</p>
-            <a href="../../index.html">Style Guide</a>
+            <a href="../../style-guide.html">Style Guide</a>
         </div>
     </footer>
 </body>
