--- a/html/projects/goggle.html
+++ b/html/projects/goggle.html
@@ -63,7 +63,7 @@
               </div>
               <div class="style-container">
                 <div class="center"> 
-                <a class="zoom" href="../../images/me-working.jpg" target="_blank"><img src="../../images/me-working.jpg" alt="random image that acts as a link"></a>
+                <a class="zoom" href="../../images/me-working.jpg" target="_blank"><img src="../../images/me-working.jpg" alt="an image of me working on the construction of the final VR goggle"></a>
               <div class="bottom-border-white"></div>
             </div>        
         </div>
@@ -78,7 +78,7 @@
           </div>
           <div class="style-container">
             <div class="center">
-          <a class="zoom" href="../../images/sketch-1.png" target="_blank"><img src="../../images/sketch-1.png" alt="random image that acts as a link"></a>
+          <a class="zoom" href="../../images/sketch-1.png" target="_blank"><img src="../../images/sketch-1.png" alt="ideation sketches of potential goggle designs"></a>
           <div class="bottom-border"></div>
         </div>
     </div>
@@ -92,7 +92,7 @@
           </div>
           <div class="style-container">
             <div class="center">
-            <a class="zoom" href="../../images/goggle2.jpg" target="_blank"><img src="../../images/goggle2.jpg" alt="random image that acts as a link"></a>
+            <a class="zoom" href="../../images/goggle2.jpg" target="_blank"><img src="../../images/goggle2.jpg" alt="first physical model of the VR goggles"></a>
             <div class="bottom-border-white"></div>
           </div>
           </div>
@@ -103,7 +103,7 @@
           </div>
           <div class="style-container">
             <div class="center">  
-            <a class="zoom" href="../../images/336.png" target="_blank"><img src="../../images/336.png" alt="random image that acts as a link"></a>
+            <a class="zoom" href="../../images/336.png" target="_blank"><img src="../../images/336.png" alt="completed physical model of goggle"></a>
             <div class="bottom-border-white"></div>
           </div>
         </div>
@@ -176,7 +176,7 @@
             <h3>Contact Me</h3>
             <p>778-000-1234</p>
             <p>calvinlin@gmail.com</p>
-            <a href="../../index.html">Style Guide</a>
+            <a href="../../style-guide.html">Style Guide</a>
         </div>
     </footer>
 </body>
