--- a/html/projects/pavilion.html
+++ b/html/projects/pavilion.html
@@ -76,7 +76,7 @@
                 </div>
                 <div class="style-container">
                     <div class="center">
-                    <a class="zoom" href="../../images/pergola-ideate.png" target="_blank"><img src="../../images/pergola-ideate.png" alt="random image that acts as a link"></a>
+                    <a class="zoom" href="../../images/pergola-ideate.png" target="_blank"><img src="../../images/pergola-ideate.png" alt="ideation sketches of pavilions"></a>
                 <div class="bottom-border"></div><br>
                 </div>
                 </div>
@@ -87,7 +87,7 @@
                 </div>
                 <div class="style-container">
                     <div class="center">
-                    <a class="zoom" href="../../images/pavilion.png" target="_blank"><img src="../../images/pavilion.png" alt="random image that acts as a link"></a>
+                    <a class="zoom" href="../../images/pavilion.png" target="_blank"><img src="../../images/pavilion.png" alt="semi-finalized rendering of pavilion design"></a>
                 <div class="bottom-border"></div><br>
                 </div>
                 </div>
@@ -109,7 +109,7 @@
             </div>
             <div class="style-container">
                 <div class="center">
-                    <a class="zoom" href="../../images/233-pav.png" target="_blank"><img src="../../images/233-pav.png" alt="random image that acts as a link"></a>
+                    <a class="zoom" href="../../images/233-pav.png" target="_blank"><img src="../../images/233-pav.png" alt="final model of pavilion including the pergola done in Rhinocerdo3D and Grasshopper"></a>
                 <div class="bottom-border-white"></div>
                 </div>
             </div>
@@ -122,11 +122,14 @@
             </div>
         </div>
         <div class="style-container">
-            <div class="center">
                 <centre>
                 <iframe class="youtube-video" width="560" height="315" src="https://www.youtube.com/embed/G-dzls0VD2k" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </centre>
-            <div class="bottom-border"></div>
+        </div>
+
+        <div class="style-container">
+            <div class="center">
+                <div class="bottom-border"></div>
             </div>
         </div>
 
@@ -178,7 +181,7 @@
             <h3>Contact Me</h3>
             <p>778-000-1234</p>
             <p>calvinlin@gmail.com</p>
-            <a href="../../index.html">Style Guide</a>
+            <a href="../../style-guide.html">Style Guide</a>
         </div>
     </footer>
 </body>
