--- a/html/projects/project-page.html
+++ b/html/projects/project-page.html
@@ -29,7 +29,7 @@
     <div class="banner-block">
         <div class="style-container">
             <div class="center" >
-                <a href="../projects/pavilion.html"><img src="../../images/233-pav.png" alt="random image that acts as a link"></a>
+                <a class="zoom" href="../projects/pavilion.html"><img src="../../images/233-pav.png" alt="Pavilion and pergola"></a>
                 <h2>Pavilion In A Park - Architechtural Design</h2>
                 <h3>Mar - Apr 2022</h3>
             </div>
@@ -38,7 +38,7 @@
 
     <div class="style-container">
         <div class="center">
-            <a href="../projects/goggle.html"><img src="../../images/336.png" alt="random image that acts as a link"></a>
+            <a class="zoom" href="../projects/goggle.html"><img src="../../images/336.png" alt="VR Goggles for seasonal depression"></a>
             <h2>VR Goggles for Seasonal Depression - Industrial Design</h2>
             <h3>Sept - Dec 2022</h3>
         </div>
@@ -47,7 +47,7 @@
     <div class="banner-block">
         <div class="style-container">
             <div class="center">
-                <a href="../projects/chair.html"><img src="../../images/233.png" alt="random image that acts as a link"></a>
+                <a class="zoom" href="../projects/chair.html"><img src="../../images/233.png" alt="An artistic and functional chair"></a>
                 <h2>This Chair Is Not A Chair - Product Design</h2>
                 <h3>Jan - Feb 2022</h3>
             </div>
@@ -59,7 +59,7 @@
             <h3>Contact Me</h3>
             <p>778-000-1234</p>
             <p>calvinlin@gmail.com</p>
-            <a href="../../index.html">Style Guide</a>
+            <a href="../../style-guide.html">Style Guide</a>
         </div>
     </footer>
 </body>
