--- a/style-guide.html
+++ b/style-guide.html
@@ -14,10 +14,15 @@
     <script defer src="SCRIPTS/script.js"></script>
 </head>
 <body>
+    <header>
+        <nav class="main-nav">
+            <a href="html/home.html">Portfolio</a>
+        </nav>
+    </header>
     <div class="banner-block" id="full-spread">
         <div class="arrow-container">
             <div class="center">
-                <h1>Calvin Lin Style Guide</h1>
+                <h1>Calvin Lin Portfolio Style Guide</h1>
                 <div class="bottom-border-white"></div><br>
                 <!-- <a href="../../images/233.png" target="_blank"><img src="../../images/233.png" alt="random image that acts as a link"></a> -->
                 <br><br>
@@ -152,7 +157,7 @@
     <div class="style-container">
         <div class="center">
             <h4>Rendered Element</h4>
-            <a class="zoom" href="#"><img src="images/233.png" alt="random image that acts as a link"></a>
+            <a class="zoom" href="#"><img src="images/me.png" alt="an image of me on Cypress Mountain"></a>
             <div class="bottom-border"></div>
         </div>
     </div>
@@ -291,6 +296,35 @@
         </div>
     </div>
 
+    <div class="banner-block">
+        <div class="style-container">
+            <div class="center">
+                <h3>Navigation Bar</h3>
+                <h4>CSS Selector</h4>
+                <p>.main-nav</p>
+                <code>
+                    &lt;nav class="main.nav"&gt;<br>
+                    &lt;a href="../html/projects/project-page.html"&gt;Projects&lt;a&gt;<br>
+                    &lt;a href="html/home.html"&gt;About Me&lt;a&gt;<br>
+                    &lt;a href="html/contact.html"&gt;Contact&lt;a&gt;<br>
+                    &lt;/nav&gt;<br>
+                </code>
+            </div>
+        </div>
+
+        <div class="style-container">
+            <div class="center">
+                <h4>Rendered Element</h4>
+                <nav class="main-nav" id="example-nav">
+                    <a href="html/projects/project-page.html">Projects</a>
+                    <a href="html/home.html">About Me</a>
+                    <a href="html/contact.html">Contact</a>         
+                </nav>
+                <div class="bottom-border-white"></div>
+            </div>
+        </div>
+    </div>
+
 </section>
 
     <section id="citations">
@@ -312,6 +346,8 @@
                     <li>How To Insert Video In HTML. W3Schools. <a href="https://www.w3docs.com/snippets/html/how-to-insert-video-in-html.html ">URL</a>
                     <li>How To Make Youtube Videos Responsive. Yoast. <a href="https://yoast.com/how-to-make-youtube-videos-responsive/">URL</a></li>
                     <li>How To Transition CSS Display + Opacity Properties. stackoverflow. <a href="https://stackoverflow.com/questions/8449933/how-to-transition-css-display-opacity-properties">URL</a></li>
+                    <li>Pure CSS animated arrows. CodePen. <a href="https://codepen.io/wiiiiilllllll/pen/nPRZej">URL</a></li>
+                    <li>How To Create CSS Animations on Scroll [With Examples]. fullPage.js <a href="https://alvarotrigo.com/blog/css-animations-scroll/">URL</a></li>
                     <li>.....And other things learned from lecture/labs/projects</li>
                 </ul>
             </div>
@@ -322,6 +358,7 @@
         <h3>Contact Me</h3>
         <p>778-000-1234</p>
         <p>calvinlin@gmail.com</p>
+        <a href="html/home.html">Check Out My Portfolio!</a>
     </div>
 </footer>
 </body>
