--- a/html/contact.html
+++ b/html/contact.html
@@ -41,11 +41,11 @@
             <label for="email">Email Address</label><br>
             <input type="text" id="email" name="emailexample" class="input-text"><br>
             <label for="message">Message</label><br>
-            <textarea id="message"></textarea><br><br>
-            <input type="submit" class="button-submit">
+            <textarea id="message-no-deco"></textarea><br><br>
+            <input type="submit" value="submit" class="button-submit">
             <h4>Thank you for the message!</h4>
             <h4>I will get back to you as soon as possible!</h4>                
-            <form target="_blank" method="get" action="../images/336-thumbnail.jpg">
+            <form target="_blank" method="get" action="../documents/calvin_lin_r3.pdf">
                   <button class="button-submit" type="submit">Check out my resume</button>
                </form>
           </div>
@@ -98,7 +98,7 @@
             <h3>Contact Me</h3>
             <p>778-000-1234</p>
             <p>calvinlin@gmail.com</p>
-            <a href="../index.html">Style Guide</a>
+            <a href="../style-guide.html">Style Guide</a>
         </div>
     </footer>
 </body>
