--- a/style-guide.html
+++ b/style-guide.html
@@ -286,9 +286,9 @@
         <div class="center">
             <h4>Rendered Element</h4>
             <label for="name">Name</label><br>
-            <input type="text" id="name" name="nameexample" class="input-text"><br>
+            <input type="text" id="name-ex" name="nameexample" class="input-text"><br>
             <label for="email">Email Address</label><br>
-            <input type="text" id="email" name="emailexample" class="input-text"><br>
+            <input type="text" id="email-ex" name="emailexample" class="input-text"><br>
             <label for="message" >Message</label><br>
             <textarea id="message"></textarea><br><br>
             <input type="submit" class="button-submit">
