--- a/style-guide.html
+++ b/style-guide.html
@@ -137,7 +137,7 @@
         <div class="style-container">
             <div class="center">
                 <h4>Rendered Element</h4>
-                <label for="email">Email</label><br>
+                <label for="emailexample">Email</label><br>
                 <input type="text" id="emailexample" name="emailexample" class="input-text">
                 <div class="bottom-border-white"></div>
             </div>
@@ -285,9 +285,9 @@
     <div class="style-container">
         <div class="center">
             <h4>Rendered Element</h4>
-            <label for="name">Name</label><br>
+            <label for="name-ex">Name</label><br>
             <input type="text" id="name-ex" name="nameexample" class="input-text"><br>
-            <label for="email">Email Address</label><br>
+            <label for="email-ex">Email Address</label><br>
             <input type="text" id="email-ex" name="emailexample" class="input-text"><br>
             <label for="message" >Message</label><br>
             <textarea id="message"></textarea><br><br>
