--- a/html/contact.html
+++ b/html/contact.html
@@ -40,7 +40,7 @@
             <input type="text" id="name" name="nameexample" class="input-text"><br>
             <label for="email">Email Address</label><br>
             <input type="text" id="email" name="emailexample" class="input-text"><br>
-            <label for="message">Message</label><br>
+            <label for="message-no-deco">Message</label><br>
             <textarea id="message-no-deco"></textarea><br><br>
             <input type="submit" value="submit" class="button-submit">
             <h4>Thank you for the message!</h4>
